--- a/assets/style/utilities.scss
+++ b/assets/style/utilities.scss
@@ -673,16 +673,16 @@ section {
 
   @for $i from 2 through 5 {
     .mb-#{$i} {
-      margin-bottom: #{$i / 2}rem;
+      margin-bottom: #{calc(calc($i / 2))}rem;
     }
     .mt-#{$i} {
-      margin-top: #{$i / 2}rem;
+      margin-top: #{calc($i / 2)}rem;
     }
     .ml-#{$i} {
-      margin-left: #{$i / 2}rem;
+      margin-left: #{calc($i / 2)}rem;
     }
     .mr-#{$i} {
-      margin-right: #{$i / 2}rem;
+      margin-right: #{calc($i / 2)}rem;
     }
   }
 
