--- a/assets/style/utilities.scss
+++ b/assets/style/utilities.scss
@@ -692,4 +692,9 @@ section {
 }
 
 @media (min-width: 601px) and (max-width: 850px) {
+  section {
+    &.section {
+      padding: 1rem 2rem;
+    }
+  }
 }
