--- a/assets/style/_variables.scss
+++ b/assets/style/_variables.scss
@@ -195,9 +195,11 @@ $theme-light: (
   "br-solid-blue-1": map.get($colors, "blue-200"),
   "br-solid-blue-2": map.get($colors, "blue-900"),
   "br-solid-brown": map.get($colors, "brown-500"),
-  "br-solid-input-focus-1": map.get($colors, "blue-100"),
   "br-solid-input-1": map.get($colors, "blue-50"),
+  "br-solid-input-focus-1": map.get($colors, "blue-100"),
   "br-solid-tag-1": map.get($colors, "blue-500"),
+  "br-solid-btn-1": map.get($colors, "blue-300"),
+  "br-solid-btn-focus-1": map.get($colors, "blue-500"),
   "br-solid-header-page": map.get($colors, "black-10"),
 
 /* BOX SHADOW */
@@ -208,6 +210,8 @@ $theme-light: (
   "color-solid-blue-1": map.get($colors, "blue-900"),
   "color-solid-blue-2": map.get($colors, "blue-500"),
   "color-solid-blue-3": map.get($colors, "blue-50"),
+  "color-solid-btn-1": map.get($colors, "blue-300"),
+  "color-solid-btn-focus-1": map.get($colors, "blue-500"),
   "color-solid-brown-1": map.get($colors, "brown-900"),
   "color-solid-brown-2": map.get($colors, "brown-500"),
   "color-solid-brown-3": map.get($colors, "brown-500"),
@@ -237,6 +241,8 @@ $theme-dark: (
   "br-solid-input-focus-1": map.get($colors, "blue-400"),
   "br-solid-input-1": map.get($colors, "blue-500"),
   "br-solid-tag-1": map.get($colors, "blue-50"),
+  "br-solid-btn-1": map.get($colors, "blue-100"),
+  "br-solid-btn-focus-1": map.get($colors, "blue-50"),
   "br-solid-header-page": map.get($colors, "white-10"),
 
 /* BOX SHADOW */
@@ -247,6 +253,8 @@ $theme-dark: (
   "color-solid-blue-1": map.get($colors, "blue-50"),
   "color-solid-blue-2": map.get($colors, "blue-100"),
   "color-solid-blue-3": map.get($colors, "blue-100"),
+  "color-solid-btn-1": map.get($colors, "blue-100"),
+  "color-solid-btn-focus-1": map.get($colors, "blue-50"),
   "color-solid-brown-1": map.get($colors, "brown-50"),
   "color-solid-brown-2": map.get($colors, "brown-600"),
   "color-solid-brown-3": map.get($colors, "brown-500"),
