--- a/assets/style/notifications.scss
+++ b/assets/style/notifications.scss
@@ -3,49 +3,61 @@
 .notifications-container {
   position: fixed;
   top: 20px;
-  right: 20px;
+  left: 0;
+  right: 0;
+  padding: 10px;
   z-index: 9999;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
-  .notification {
-    min-width: 220px;
-    padding: 12px 15px;
-    border-radius: 6px;
-    color: #fff;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-    font-size: 14px;
-    opacity: 0.95;
+  .notifications {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 40px;
+    flex-direction: column;
+    align-items: end;
+    justify-content: end;
+    width: 100%;
 
-    &:not(:last-child) {
-      margin-bottom: 10px;
-    }
-
-    &.success {
-      border: 1px solid $rl-app-brown-50;
-      background-color: $rl-app-blue-500;
-    }
-    &.error {
-      background-color: #f44336;
-    }
-    &.info {
-      background-color: #2196f3;
-    }
-    &.warning {
-      background-color: #f3d021;
-    }
-
-    button {
-      border: none;
-      border-radius: 50%;
-      font-size: $rl-app-desktop-fs-md;
+    .notification {
+      min-width: 220px;
+      padding: 12px 15px;
+      border-radius: 6px;
       color: #fff;
-      background-color: transparent;
-      cursor: pointer;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+      font-size: 14px;
+      opacity: 0.95;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 40px;
+
+      &:not(:last-child) {
+        margin-bottom: 10px;
+      }
+
+      &.success {
+        border: 1px solid $rl-app-brown-50;
+        background-color: $rl-app-blue-500;
+      }
+      &.error {
+        background-color: #f44336;
+      }
+      &.info {
+        background-color: #2196f3;
+      }
+      &.warning {
+        background-color: #f3d021;
+      }
+
+      button {
+        border: none;
+        border-radius: 50%;
+        font-size: $rl-app-desktop-fs-md;
+        color: #fff;
+        background-color: transparent;
+        cursor: pointer;
+      }
     }
   }
 }
@@ -59,4 +71,18 @@
 .fade-leave-to {
   opacity: 0;
   transform: translateY(-10px);
+}
+
+@media (max-width: 600px) {
+  .notifications-container {
+    .notifications {
+      align-items: center;
+      justify-content: center;
+
+      .notification {
+        min-width: 70%;
+        max-width: 95%;
+      }
+    }
+  }
 }
