--- a/assets/style/_variables.scss
+++ b/assets/style/_variables.scss
@@ -189,6 +189,7 @@ $theme-light: (
   "bg-solid-dropdown-item-hover-1": map.get($colors, "blue-50"),
   "bg-solid-card-hover-1": map.get($colors, "blue-100"),
   "bg-solid-brown-1": map.get($colors, "brown-100"),
+  "bg-solid-brown-2": map.get($colors, "brown-500"),
   "bg-opacity-1": map.get($colors, "brown-op-1-10"),
 
 /* BORDERS */
@@ -231,6 +232,7 @@ $theme-dark: (
   "bg-solid-dropdown-item-hover-1": map.get($colors, "blue-500"),
   "bg-solid-card-hover-1": map.get($colors, "blue-500"),
   "bg-solid-brown-1": map.get($colors, "brown-900"),
+  "bg-solid-brown-2": map.get($colors, "brown-700"),
   "bg-opacity-1": map.get($colors, "brown-op-2-10"),
 
 /* BORDERS */
