--- a/assets/style/about.scss
+++ b/assets/style/about.scss
@@ -502,6 +502,69 @@
   }
 }
 
+.feedbacks {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-height: 700px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  gap: 12px;
+  margin: 20px 0;
+
+  .feedback {
+    display: flex;
+    flex-direction: column;
+    padding: 12px 16px;
+    width: 100%;
+    gap: 12px;
+    border: 1px solid var(--br-solid-blue-2);
+    border-radius: 10px 0 10px 0;
+    max-height: 120px;
+
+    .header-feedback {
+      display: flex;
+      gap: 12px;
+      width: 100%;
+      align-items: center;
+      justify-content: space-between;
+      border-bottom: 1px solid var(--br-solid-blue-2);
+
+      .title-feedback {
+        font-size: clamp(12px, 1vw + 0.4rem, 16px);
+        font-weight: bolder;
+        overflow: hidden;
+        text-wrap: nowrap;
+        text-overflow: ellipsis;
+        text-transform: uppercase;
+
+        i {
+          font-size: clamp(12px, 1vw + 0.2rem, 14px);
+          font-weight: 400;
+          text-transform: initial;
+          overflow: hidden;
+          text-wrap: nowrap;
+          text-overflow: ellipsis;
+        }
+      }
+
+      .rating-feedback {
+        text-wrap: nowrap;
+        font-size: 18px;
+      }
+    }
+
+    .description-feedback {
+      font-size: clamp(12px, 1vw + 0.2rem, 16px);
+      font-weight: 600;
+      text-align: justify;
+      font-style: italic;
+      overflow: hidden;
+    }
+  }
+}
+
 @media (max-width: 600px) {
 
   .hard-skills {
