--- a/assets/style/resume.scss
+++ b/assets/style/resume.scss
@@ -3,6 +3,14 @@
 .vue-pdf-embed__page {
   margin-bottom: 20px;
   box-shadow: 0 2px 8px 4px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  transform: translateX(-80px);
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+
+  &.visible {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 
 .app-vue-pdf-embed {
@@ -14,8 +22,9 @@
   justify-content: center;
   align-items: center;
   width: 80%;
-  background-color: $rl-app-blue-500;
+  background-color: var(--bg-opacity-2);
   margin-bottom: 20px;
+  box-shadow: 0 2px 8px 4px rgba(0, 0, 0, 0.1);
 
   .actions-pdf {
     display: flex;
@@ -26,7 +35,6 @@
     height: 100%;
 
     .total-pages-pdf {
-      color: $rl-app-blue-50;
       font-size: $rl-app-desktop-fs-md;
       font-weight: normal;
     }
