--- a/assets/style/_variables.scss
+++ b/assets/style/_variables.scss
@@ -182,7 +182,9 @@ $theme-light: (
   "bg-solid-blue-1": map.get($colors, "blue-50"),
   "bg-solid-blue-2": map.get($colors, "blue-500"),
   "bg-solid-blue-3": map.get($colors, "blue-200"),
+  "bg-solid-blue-3-hover": map.get($colors, "blue-500"),
   "bg-solid-blue-4": map.get($colors, "blue-50"),
+  "bg-solid-blue-5": map.get($colors, "blue-500"),
   "bg-gradient-1": map.get($colors, "gradient-light-linear-1"),
   "bg-solid-input-1": map.get($colors, "white"),
   "bg-solid-input-2": map.get($colors, "blue-50"),
@@ -192,10 +194,12 @@ $theme-light: (
   "bg-solid-brown-2": map.get($colors, "brown-500"),
   "bg-opacity-1": map.get($colors, "brown-op-1-10"),
   "bg-opacity-2": map.get($colors, "white"),
+  "bg-opacity-3": map.get($colors, "white-90"),
 
 /* BORDERS */
   "br-solid-blue-1": map.get($colors, "blue-200"),
   "br-solid-blue-2": map.get($colors, "blue-900"),
+  "br-solid-blue-3": map.get($colors, "blue-500"),
   "br-solid-brown": map.get($colors, "brown-500"),
   "br-solid-input-1": map.get($colors, "blue-50"),
   "br-solid-input-focus-1": map.get($colors, "blue-100"),
@@ -226,7 +230,9 @@ $theme-dark: (
   "bg-solid-blue-1": map.get($colors, "blue-900"),
   "bg-solid-blue-2": map.get($colors, "blue-700"),
   "bg-solid-blue-3": map.get($colors, "blue-500"),
+  "bg-solid-blue-3-hover": map.get($colors, "blue-900"),
   "bg-solid-blue-4": map.get($colors, "blue-700"),
+  "bg-solid-blue-5": map.get($colors, "blue-50"),
   "bg-gradient-1": map.get($colors, "gradient-dark-radial-1"),
   "bg-solid-input-1": map.get($colors, "blue-900"),
   "bg-solid-input-2": map.get($colors, "blue-500"),
@@ -236,10 +242,12 @@ $theme-dark: (
   "bg-solid-brown-2": map.get($colors, "brown-700"),
   "bg-opacity-1": map.get($colors, "brown-op-2-10"),
   "bg-opacity-2": map.get($colors, "blue-700"),
+  "bg-opacity-3": map.get($colors, "black-90"),
 
 /* BORDERS */
   "br-solid-blue-1": map.get($colors, "blue-500"),
   "br-solid-blue-2": map.get($colors, "blue-50"),
+  "br-solid-blue-3": map.get($colors, "blue-50"),
   "br-solid-brown": map.get($colors, "brown-500"),
   "br-solid-brown-1": map.get($colors, "brown-100"),
   "br-solid-input-focus-1": map.get($colors, "blue-400"),
