--- a/assets/style/utilities.scss
+++ b/assets/style/utilities.scss
@@ -613,6 +613,46 @@ section {
   }
 }
 
+.switch-checkbox {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+
+  input[type="checkbox"] {
+    display: none;
+  }
+
+  .slider {
+    display: block;
+    padding: 4px;
+    width: 50px;
+    background-color: transparent;
+    border: 1px solid var(--br-solid-blue-3);
+    border-radius: 40px;
+
+    .check-ball {
+      display: block;
+      width: 16px;
+      height: 16px;
+      border-radius: 50%;
+      background-color: var(--bg-solid-blue-5);
+      transition: all 300ms ease-in-out;
+    }
+  }
+
+  input[type="checkbox"]:checked + .slider {
+    background-color: var(--bg-solid-brown-2);
+  }
+
+  input[type="checkbox"]:checked + .slider {
+    .check-ball {
+      transform: translateX(24px);
+    }
+  }
+}
+
 .options-zoom-image {
   display: flex;
   justify-content: center;
